# pangu_weather

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
benchmarks/: batching_benchmarks.py  measurements.py  timer.py
pangu_weather/: __init__.py  layers.py  onnx_to_torch_parameter_mapping.csv  pangu_weather.py
tests/: conftest.py  prepare_test_data.py  utils.py
tests/test_against_pangu_pytorch/: pangu_pytorch_model.py  test_down_and_upsample.py  test_earth_attention_3D.py  test_earth_mlp.py  test_earth_specific_block.py  test_earth_specific_layer.py  test_pangu_weather.py  test_patch_embedding.py  test_patch_recovery.py
tests/test_data/: .gitignore
tests/test_model/: pangu_pytorch_model.py  test_auxiliary_data.py  test_down_and_upsample.py  test_earth_attention_3D.py  test_earth_mlp.py  test_earth_specific_block.py  test_earth_specific_layer.py  test_pangu_weather.py  test_patch_embedding.py  test_patch_recovery.py
