[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pangu_weather"
version = "0.0.1"
dependencies = [
    "onnx",
    "pandas",
    "torch",
    "timm",
]
requires-python = ">=3.9"
description = "A PyTorch Implementation of Pangu-Weather with Multi-Sample Batch Support"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
    "pytest",
    "onnxruntime"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["pangu_pytorch"]
markers = [
    "smoke: fast tests for the basic functionality, select with '-m smoke'",
    "slow: slow tests, deselect with '-m \"not slow\"'",
]
log_cli = true
log_cli_format = "[%(asctime)s][%(levelname)s][%(name)s:%(lineno)d] - %(message)s"
log_cli_level = "INFO"