[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pangu_weather"
version = "0.0.1"
dependencies = [
    "onnx",
    "pandas",
    "torch",
    "timm",
]
requires-python = ">=3.9"
description = "A PyTorch Implementation of Pangu-Weather with Multi-Sample Batch Support"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
    "coverage",
    "pytest",
    "onnxruntime",
    "gdown",
    "pre-commit",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["pangu_pytorch"]
markers = [
    "smoke: fast tests for the basic functionality, select with '-m smoke'",
    "slow: slow tests, deselect with '-m \"not slow\"'",
]
log_cli = true
log_cli_format = "[%(asctime)s][%(levelname)s][%(name)s:%(lineno)d] - %(message)s"
log_cli_level = "INFO"


[tool.coverage.run]
source = ['pangu_weather']


[tool.ruff]
line-length = 120

[tool.ruff.format]
# allow reformatting to single line even if line ends with comma
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
modules = ["pangu_weather"]
exclude = ['tests/']

ignore_missing_imports = true
## additional mypy options once we add type hints
# disallow_untyped_defs = true
# disallow_any_unimported = true
# check_untyped_defs = true
# warn_return_any = true
